[workspace]
members = [
    "bencher",
    "error",
    "fuzz/*",
    "harness",
    "keys",
    "programs/*",
    "test-programs/*",
]
resolver = "2"

[workspace.package]
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/buffalojoec/mollusk"
readme = "README.md"
license = "MIT"
edition = "2021"
version = "0.0.13"

[workspace.dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
criterion = "0.5.1"
ed25519-dalek = "=1.0.1"
libsecp256k1 = "0.6.0"
mollusk-svm = { path = "harness", version = "0.0.13" }
mollusk-svm-bencher = { path = "bencher", version = "0.0.13" }
mollusk-svm-error = { path = "error", version = "0.0.13" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.0.13" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0.0.13" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0.0.13" }
mollusk-svm-keys = { path = "keys", version = "0.0.13" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0.0.13" }
mollusk-svm-programs-token = { path = "programs/token", version = "0.0.13" }
num-format = "0.4.4"
# From Agave monorepo:
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
rand0-7 = { package = "rand", version = "0.7" }
rayon = "1.10.0"
serde = "1.0.203"
serde_json = "1.0.117"
serial_test = "2.0"
solana-bpf-loader-program = { path = "../agave/programs/bpf_loader" }
solana-compute-budget = { path = "../agave/compute-budget" }
solana-log-collector = { path = "../agave/log-collector" }
solana-logger = { path = "../agave/logger" }
solana-program = { path = "../agave/sdk/program" }
solana-program-runtime = { path = "../agave/program-runtime" }
solana-stake-program = { path = "../agave/programs/stake" }
solana-system-program = { path = "../agave/programs/system" }
solana-sdk = { path = "../agave/sdk" }
solana-svm-fuzz-harness-instr-entrypoint = { path = "../agave/svm-fuzz-harness/instr/entrypoint" }
solana-timings = { path = "../agave/timings" }
thiserror = "1.0.64"

[patch.crates-io]
solana-instruction = { path = "../agave/sdk/instruction" }
solana-program = { path = "../agave/sdk/program" }
solana-pubkey = { path = "../agave/sdk/pubkey" }
solana-sdk = { path = "../agave/sdk" }

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
]
