[workspace]
members = [
    "bencher",
    "cli",
    "error",
    "fuzz/*",
    "harness",
    "keys",
    "programs/*",
    "test-programs/*",
]
resolver = "2"

[workspace.package]
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/buffalojoec/mollusk"
readme = "README.md"
license = "MIT"
edition = "2021"
version = "0.0.15"

[workspace.dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
clap = "4.5.4"
criterion = "0.5.1"
ed25519-dalek = "=1.0.1"
libsecp256k1 = "0.6.0"
mollusk-svm = { path = "harness", version = "0.0.15" }
mollusk-svm-bencher = { path = "bencher", version = "0.0.15" }
mollusk-svm-cli = { path = "cli", version = "0.0.15" }
mollusk-svm-error = { path = "error", version = "0.0.15" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.0.15" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0.0.15" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0.0.15" }
mollusk-svm-keys = { path = "keys", version = "0.0.15" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0.0.15" }
mollusk-svm-programs-token = { path = "programs/token", version = "0.0.15" }
num-format = "0.4.4"
prost = "0.9"
prost-build = "0.9"
prost-types = "0.9"
rand0-7 = { package = "rand", version = "0.7" }
rayon = "1.10.0"
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
serial_test = "2.0"
solana-account = "2.2"
solana-account-info = "2.2"
solana-bpf-loader-program = "2.2"
solana-clock = "2.2"
solana-compute-budget = "2.2"
solana-cpi = "2.2"
solana-ed25519-program = "2.2"
solana-epoch-rewards = "2.2"
solana-epoch-schedule = "2.2"
solana-feature-set = "2.2"
solana-fee-structure = "2.2"
solana-hash = "2.2"
solana-instruction = "2.2"
solana-keccak-hasher = "2.2"
solana-loader-v3-interface = "3.0"
solana-log-collector = "2.2"
solana-logger = "2.2"
solana-native-token = "2.2"
solana-precompiles = "2.2"
solana-program-entrypoint = "2.2"
solana-program-error = "2.2"
solana-program-runtime = "2.2"
solana-pubkey = "2.2"
solana-rent = "2.2"
solana-sdk = "2.2"
solana-sdk-ids = "2.2"
solana-secp256k1-program = "2.2"
solana-slot-hashes = "2.2"
solana-stake-interface = "1.0"
solana-stake-program = "2.2"
solana-system-interface = "1.0"
solana-system-program = "2.2"
solana-sysvar = "2.2"
solana-sysvar-id = "2.2"
solana-timings = "2.2"
solana-transaction-context = "2.2"
thiserror = "1.0.64"
tokio = "1.37.0"
which = "=4.4.0"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
]
