[package]
name = "mollusk-svm-bencher"
description = "SVM program bench harness."
documentation = "https://docs.rs/mollusk-svm-bencher"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
chrono = "0.4.38"
num-format = { workspace = true }
serde_json = { workspace = true }
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }

[dev-dependencies]
solana-logger = { workspace = true }
