[package]
name = "mollusk-svm-cli"
description = "Mollusk CLI."
documentation = "https://docs.rs/mollusk-svm-cli"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true }
mollusk-svm-fuzz-fixture-firedancer = { workspace = true }
mollusk-svm = { workspace = true, features = ["fuzz", "fuzz-fd", "serde"] }
solana-logger = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "mollusk"
path = "src/main.rs"
