[package]
name = "mollusk-svm-fuzz"
description = "SVM program fuzz harness."
documentation = "https://docs.rs/mollusk-svm-fuzz"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
solana-compute-budget = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
