[package]
name = "mollusk-svm"
description = "SVM program test harness."
documentation = "https://docs.rs/mollusk-svm"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = []
all-builtins = [
    "dep:solana-stake-program",
]
fuzz = [
    "dep:mollusk-svm-fuzz-fixture",
    "dep:mollusk-svm-fuzz-fs",
]
fuzz-fd = [
    "dep:mollusk-svm-fuzz-fixture-firedancer",
    "dep:mollusk-svm-fuzz-fs",
]

[dependencies]
bincode = { workspace = true }
mollusk-svm-error = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true, optional = true }
mollusk-svm-fuzz-fixture-firedancer = { workspace = true, optional = true }
mollusk-svm-fuzz-fs = { workspace = true, optional = true }
mollusk-svm-keys = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-compute-budget = { workspace = true }
solana-program-runtime = { workspace = true }
solana-stake-program = { workspace = true, optional = true }
solana-system-program = { workspace = true }
solana-sdk = { workspace = true }
solana-logger = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rayon = { workspace = true }
serial_test = { workspace = true }

[[bench]]
name = "ips"
harness = false
