[package]
name = "mollusk-svm"
description = "SVM program test harness."
documentation = "https://docs.rs/mollusk-svm"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = []
all-builtins = [
    "dep:solana-stake-program",
]
fuzz = [
    "dep:mollusk-svm-fuzz-fixture",
    "dep:solana-svm-fuzz-harness-fixture-fs",
]
fuzz-fd = [
    "dep:mollusk-svm-fuzz-fixture-firedancer",
    "dep:solana-svm-fuzz-harness-fixture-fs",
]

[dependencies]
bincode = { workspace = true }
mollusk-svm-error = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true, optional = true }
mollusk-svm-fuzz-fixture-firedancer = { workspace = true, optional = true }
mollusk-svm-keys = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-compute-budget = { workspace = true }
solana-log-collector = { workspace = true }
solana-logger = { workspace = true }
solana-program-runtime = { workspace = true }
solana-stake-program = { workspace = true, optional = true }
solana-system-program = { workspace = true }
solana-sdk = { workspace = true }
solana-svm-fuzz-harness-fixture-fs = { workspace = true, optional = true }
solana-svm-fuzz-harness-instr-entrypoint = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
ed25519-dalek = { workspace = true }
libsecp256k1 = { workspace = true }
rand0-7 = { workspace = true }
rayon = { workspace = true }
serial_test = { workspace = true }

[[bench]]
name = "ips"
harness = false
