[package]
name = "mollusk-svm"
description = "SVM program test harness."
documentation = "https://docs.rs/mollusk-svm"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = []
all-builtins = [
    "dep:solana-stake-program",
]
fuzz = [
    "dep:mollusk-svm-fuzz-fixture",
    "dep:mollusk-svm-fuzz-fs",
]
fuzz-fd = [
    "dep:mollusk-svm-fuzz-fixture-firedancer",
    "dep:mollusk-svm-fuzz-fs",
]
serde = ["dep:serde"]

[dependencies]
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
mollusk-svm-error = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true, optional = true }
mollusk-svm-fuzz-fixture-firedancer = { workspace = true, optional = true }
mollusk-svm-fuzz-fs = { workspace = true, optional = true }
mollusk-svm-keys = { workspace = true }
solana-account = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-clock = { workspace = true }
solana-compute-budget = { workspace = true }
solana-epoch-rewards = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-feature-set = { workspace = true }
solana-fee-structure = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-loader-v3-interface = { workspace = true }
solana-log-collector = { workspace = true }
solana-logger = { workspace = true }
solana-precompiles = { workspace = true }
solana-program-error = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-slot-hashes = { workspace = true }
solana-stake-interface = { workspace = true }
solana-stake-program = { workspace = true, optional = true }
solana-system-program = { workspace = true }
solana-sysvar = { workspace = true }
solana-sysvar-id = { workspace = true }
solana-timings = { workspace = true }
solana-transaction-context = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
ed25519-dalek = { workspace = true }
libsecp256k1 = { workspace = true }
rand0-7 = { workspace = true }
rayon = { workspace = true }
serial_test = { workspace = true }
solana-ed25519-program = { workspace = true }
solana-native-token = { workspace = true }
solana-secp256k1-program = { workspace = true }
solana-system-interface = { workspace = true }

[[bench]]
name = "ips"
harness = false
