[package]
name = "mollusk-svm-keys"
description = "SVM transaction keys utils."
documentation = "https://docs.rs/mollusk-svm-keys"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
solana-sdk = { workspace = true }
