[package]
name = "mollusk-svm-oyster"
version = "0.0.1"
description = "SVM program harness with fuzz fixture support."
documentation = "https://docs.rs/mollusk-svm-oyster"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
mollusk-svm-fuzz = { path = "../fuzz" }
mollusk-svm = { path = "../harness" }
solana-sdk = { workspace = true }
