[package]
name = "mollusk-svm-fuzz-fixture-firedancer"
description = "Mollusk-compatible Firedancer fuzz fixture for SVM programs."
documentation = "https://docs.rs/mollusk-svm-fuzz-fixture-firedancer"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
mollusk-svm-fuzz-fs = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-account = { workspace = true }
solana-feature-set = { workspace = true }
solana-keccak-hasher = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction-context = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
which = { workspace = true }
