[package]
name = "mollusk-svm-fuzz-fixture"
description = "Mollusk-compatible fuzz fixture for SVM programs."
documentation = "https://docs.rs/mollusk-svm-fuzz-fixture"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
mollusk-svm-fuzz-fs = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
solana-compute-budget = { workspace = true }
solana-sdk = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
which = { workspace = true }
