[package]
name = "mollusk-svm-fuzz-fixture"
description = "Mollusk-compatible fuzz fixture for SVM programs."
documentation = "https://docs.rs/mollusk-svm-fuzz-fixture"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
solana-compute-budget = { workspace = true }
solana-sdk = { workspace = true }
solana-svm-fuzz-harness-fixture-fs = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
