[package]
name = "mollusk-svm-fuzz-fixture"
description = "Mollusk-compatible fuzz fixture for SVM programs."
documentation = "https://docs.rs/mollusk-svm-fuzz-fixture"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
mollusk-svm-fuzz-fs = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-account = { workspace = true }
solana-clock = { workspace = true }
solana-compute-budget = { workspace = true }
solana-epoch-rewards = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-feature-set = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keccak-hasher = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-slot-hashes = { workspace = true }
solana-stake-interface = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
which = { workspace = true }
