[package]
name = "mollusk-svm-fuzz-fs"
description = "Filesystem management for fuzz tooling."
documentation = "https://docs.rs/mollusk-svm-fuzz-fs"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
bs58 = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-keccak-hasher = { workspace = true }
