[package]
name = "mollusk-svm-fuzz"
version = "0.0.1"
description = "SVM program fuzz harness."
documentation = "https://docs.rs/mollusk-svm-fuzz"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
