[package]
name = "mollusk-svm-programs-memo"
description = "SVM program SPL Memo."
documentation = "https://docs.rs/mollusk-svm-programs-memo"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = ["memo", "memo-v1"]
memo = []
memo-v1 = []

[dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
