[package]
name = "mollusk-svm-programs-token"
description = "SVM program SPL Token."
documentation = "https://docs.rs/mollusk-svm-programs-token"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = ["token", "associated-token", "token-2022"]
token = []
associated-token = []
token-2022 = []

[dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
