[package]
name = "test-program-primary"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
